<resources>
    <string name="app_name">TrainingDiary</string>
    <string name="button_add_training">СОХРАНИТЬ</string>
    <string name="duration">Сколько времени заняло?</string>
    <string name="radioButton_hard">Сложно</string>
    <string name="radiobutton_normal">Нормально</string>
    <string name="radiobutton_easy">Легко</string>
    <string name="textview_question">Какой был уровень нагрузки?</string>
    <string name="hint_add_description">Введите описание тренировки:</string>
    <string name="edit_text_when">Когда была тренировка?</string>
    <string name="hint_title">Название тренировки:</string>
    <string name="training_duration">%dч. %02dмин.</string>
    <string name="warning_title">Заполните название тренировки!</string>
    <string name="lvl_easy">Сложность: легко</string>
    <string name="lvl_medium">Сложность: нормально</string>
    <string name="lvl_hard">Сложность: тяжело</string>
    <string name="warning_delete">Удалить данные от тренировке?</string>
    <string name="confirmation_of_deletion">Подтверждение удаления</string>
    <string name="yes">да</string>
    <string name="no">нет</string>
    <string name="title_list_training">Список тренировок</string>
    <string name="title_add_training">Добавить тренировку</string>
    <string name="title_settings">Настройки</string>
    <string name="setting_duration">Длительность тренировки</string>
    <string name="setting_duration_default">Изменить длительность тренировки по умолчанию, мин</string>
    <string name="settings">Настройки</string>
    <string name="menu_feedback">Написать разрабочику</string>
    <string name="menu_about">О приложении</string>
    <string name="add_training_duration">длительность:</string>
    <string name="about_title_app">TrainingDiary</string>
    <string name="about_app_version">version.0.3 15.05.2020</string>
    <string name="feedback_email">mailto:rutkovski.dp@gmail.com</string>
    <string name="intent_title_send_feedback">Send feedback</string>
    <string name="item_training_title">Название тренировки</string>
    <string-array name="level_default">
        <item>Легко</item>
        <item>Сложно</item>
        <item>Нормально</item>
    </string-array>


</resources>
