<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTrainingActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="3">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:onClick="onClickAddDate">

                        <TextView
                            android:id="@+id/textViewDayOfMounth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="8"
                            android:textSize="48sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textViewDayOfWeek"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="пятница"
                            android:textSize="18sp"
                            app:layout_constraintStart_toEndOf="@+id/textViewDayOfMounth"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textViewMountAndYear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="сент 2020"
                            android:textAllCaps="true"
                            android:textSize="24sp"
                            app:layout_constraintStart_toEndOf="@+id/textViewDayOfMounth"
                            app:layout_constraintTop_toBottomOf="@+id/textViewDayOfWeek" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="onClickDuration"
                    android:layout_weight="4">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="длительность:"
                            android:textSize="18sp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textViewDuration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/hint_title"
                android:importantForAutofill="no"
                android:inputType="textAutoCorrect"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textViewWhat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"

                android:gravity="center"
                android:text="@string/textview_question"
                android:textColor="?attr/colorControlNormal"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:tag="1"
                    android:text="@string/radiobutton_easy"
                    android:textColor="?attr/colorControlNormal" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:checked="true"
                    android:gravity="center"
                    android:tag="2"
                    android:text="@string/radiobutton_normal"
                    android:textColor="?attr/colorControlNormal" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:tag="3"
                    android:text="@string/radioButton_hard"
                    android:textColor="?attr/colorControlNormal" />
            </RadioGroup>

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="#2A000000"
                android:gravity="start|top"
                android:hint="@string/hint_add_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:maxLines="8"
                android:minHeight="100dp"
                android:minLines="8"
                android:padding="8dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimary"
                android:onClick="onClickButtonAdd"
                android:padding="12dp"
                android:text="@string/button_add_training"
                android:textColor="@color/design_default_color_background"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>